--- a/libft/libft/Makefile
+++ b/libft/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: akhodara <akhodara@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/27 15:35:56 by akhodara          #+#    #+#              #
-#    Updated: 2023/05/22 20:46:21 by akhodara         ###   ########.fr        #
+#    Updated: 2023/06/15 19:18:04 by akhodara         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,20 +14,20 @@ SRCS			=	ft_isalnum.c ft_isprint.c ft_memcmp.c  ft_putchar_fd.c ft_split.c \
 					ft_strlcat.c ft_strncmp.c ft_substr.c ft_atoi.c ft_isalpha.c \
 					ft_itoa.c ft_memcpy.c  ft_putendl_fd.c ft_strchr.c  ft_strlcpy.c \
 					ft_strnstr.c ft_tolower.c ft_bzero.c ft_isascii.c \
+					ft_uitoa.c\
 					ft_memmove.c ft_putnbr_fd.c  ft_strdup.c ft_strrchr.c \
 					ft_toupper.c ft_calloc.c  ft_isdigit.c ft_memchr.c  ft_memset.c  \
 					ft_putstr_fd.c  ft_strjoin.c ft_strmapi.c ft_strtrim.c \
 					ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c \
 					ft_lstdelone.c ft_lstiter.c ft_lstlast.c \
 					ft_lstmap.c ft_lstnew.c ft_lstsize.c \
-					ft_striteri.c ft_strlen.c g_n_l.c
-					
+					ft_striteri.c ft_strlen.c g_n_l.c\
+					../libftplus/del_matrix_pos.c ../libftplus/del_str_pos.c ../libftplus/free_matrix.c\
+					../libftplus/ft_lst_free.c ../libftplus/ft_lst_sort.c ../libftplus/ft_lstdup.c\
+					../libftplus/ft_new_node.c ../libftplus/ft_strjoin3.c ../libftplus/list_to_matrix.c\
+					../libftplus/matrix_add_back.c ../libftplus/matrix_dup.c ../libftplus/matrix_len.c \
+					../libftplus/print_matrix.c
 OBJS			= $(SRCS:.c=.o)
-
-BONUS			=	ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c \
-					ft_lstdelone.c ft_lstiter.c ft_lstlast.c \
-					ft_lstmap.c ft_lstnew.c ft_lstsize.c
-BONUS_OBJS		= $(BONUS:.c=.o)
 
 CC				= cc
 RM				= rm -f
@@ -41,14 +41,14 @@ $(NAME):		$(OBJS)
 				ar -rcs $(NAME) $(OBJS)
 
 clean:
-				$(RM) $(OBJS) $(BONUS_OBJS)
+				$(RM) $(OBJS)
 
 fclean:			clean
 				$(RM) $(NAME)
 
 re:				fclean $(NAME)
 
-bonus:			$(OBJS) $(BONUS_OBJS)
-				ar rcs $(NAME) $(OBJS) $(BONUS_OBJS)
+bonus:			$(OBJS)
+				ar rcs $(NAME) $(OBJS)
 
 .PHONY:			all clean fclean re
